# TypeDrift

./: .gitignore  CMakeLists.txt  README.md  gen_file  gen_file.cpp
data/: users.txt
data/texts/: practice.txt  practice0.txt  practice1.txt  practice2.txt  practice3.txt  practice4.txt  practice5.txt  practice6.txt  practice7.txt  practice8.txt  practice9.txt
data/users/: !IllhZ((1$PdS)A3o-*f^Bg.txt  GMEhZlZ(1$PdS)A3o-*f^BF.txt  Gandu.txt  Ml#KmsZ(1$PdS)A3o-*f^Be.txt  Shadow.txt  TheOne.txt  bossman.txt  luimas.txt  samiul.txt  sarkar.txt
src/: main.cpp
src/auth/: hashing.cpp  hashing.h  user_manager.cpp  user_manager.h
src/core/: leaderboard.cpp  leaderboard.h  session_logger.cpp  session_logger.h
src/game_modes/: SpeedTest.cpp  SpeedTest.h  TerminalSetup.cpp  TerminalSetup.h  TimeTest.cpp  TimeTest.h  falling_words.cpp  falling_words.h  main.cpp  reference_version.cpp  test  vowel_game.cpp  vowel_game.h
src/utils/: file_helper.cpp  file_helper.h  user.cpp  user.h
texts/easy/: easy14.txt  easy17.txt  easy19.txt  easy2.txt  easy22.txt  easy25.txt  easy26.txt  easy31.txt  easy34.txt  easy35.txt  easy37.txt  easy38.txt  easy4.txt  easy42.txt  easy43.txt  easy44.txt  easy46.txt  easy47.txt  easy48.txt  easy5.txt  easy50.txt
texts/hard/: hard1.txt  hard12.txt  hard14.txt  hard18.txt  hard21.txt  hard25.txt  hard27.txt  hard29.txt  hard3.txt  hard33.txt  hard37.txt  hard39.txt  hard41.txt  hard43.txt  hard47.txt  hard49.txt  hard5.txt
texts/medium/: medium1.txt  medium12.txt  medium14.txt  medium16.txt  medium19.txt  medium20.txt  medium22.txt  medium26.txt  (+7 more)
(+98 files in other folders)
